Revise CSS for some layout issues
Add constuctor template for game states, work on integrating with GameWorld class (WIP)

--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@
   }
 }
 
-@media (orientation: portrait) {
+@media (orientation: portrait) and (min-height: 650px) {
   .game-screen__border {
     position: absolute;
     height: auto;
@@ -89,7 +89,7 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 12%;
-    margin-bottom: 12%;
+    /* margin-bottom: 12%; */
     width: 84%;
     height: auto;
     aspect-ratio: 16/9;
@@ -142,7 +142,7 @@ img {
   background-color: #46fcff;
   z-index: 1;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
 }
 
 .game-screen {
@@ -151,6 +151,7 @@ img {
   height: auto;
   aspect-ratio: 16/9;
   position: relative;
+  overflow: hidden;
 }
 
 /* Utility classes */
@@ -314,7 +315,7 @@ embed {
   transition: transform 0.6s 0.5s linear;
   padding: 1em 1em 1em 4em;
   width: 70%;
-  height: 40%;
+  /* height: 40%; */
   bottom: 5%;
   left: 25%;
 }
@@ -902,11 +903,11 @@ div#excited-chicken {
 /* ||||  Virtual Controller styles |||| */
 
 #ui--virtual-controller {
-  width: 100%;
-  height: 100%;
-  /* border: 5px solid orange; */
-  z-index: 10;
   padding-bottom: 5%;
+  margin-bottom: 0;
+  bottom: 0;
+  position: absolute;
+  overflow: hidden;
 }
 
 #ui--virtual-controller img {
